# tracy

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  aabb.hpp  appveyor.yml  bitbucket-pipelines.yml  camera.hpp  geom.hpp  hitable.hpp  material.hpp  noise.hpp  ray.hpp  raytracer.cpp  texture.hpp  timer.hpp
data/scenes/: bunny.scn  cornell.scn  dragon.scn  furnace.scn  helmet.scn  random.scn  spheres.scn  template.scn  testtree.scn  trimesh.scn
ext/: stb_image.h  tiny_obj_loader.h
src/: aabb.h  aabb.hpp  bitmap.cpp  bitmap.h  bvh.h  camera.h  camera.hpp  collision.h  common.h  container.h  geom.hpp  hitable.hpp  hitablelist.hpp  input.h  kdtree.h  lnx_raytracer.cpp  log.h  material.cpp  material.h  material.hpp  mesh.cpp  mesh.h  module.h  pdf.hpp  random.h  ray.h  ray.hpp  raytracer.cpp  scene.cpp  scene.h  scenes.hpp  texture.h  texture.hpp  timer.h  timer.hpp  tmath.h  triangle.h  vertex.h  win_raytracer.cpp
src/cuda/: mathutils.cuh  raytracer.cu
src/kernels/raster/cpu/: cpu_render.cpp  cpu_render.h
src/kernels/raster/opengl/: gl_material.h  opengl_render.cpp  opengl_render.h
src/kernels/rasterization/cpu/: cpu_render.cpp  cpu_render.h
src/kernels/rasterization/opengl/: gl_material.h  gl_mesh.h  materials.h  opengl_render.cpp  opengl_render.h  opengl_specific.h
src/kernels/raytracing/cuda/: cuda_details.cpp  cuda_details.h  cuda_log.h  cuda_material.h  cuda_mesh.h  cuda_scene.h  cuda_specific.h  cuda_trace.cpp  cuda_trace.cu  cuda_trace.cuh  cuda_trace.h  cuda_vertex.h  log.h
src/kernels/raytracing/dxr/: dxr_specific.h  dxr_trace.cpp  dxr_trace.h
src/kernels/raytracing/software/: cpu_details.cpp  cpu_details.h  cpu_specific.h  cpu_trace.cpp  cpu_trace.h  kdtree.h  simdhelper.h
src/materials/: dielectric.hpp  emissive.hpp  isotropic.hpp  lambertian.hpp  material.hpp  metal.hpp
src/pdf/: cosine.hpp  hitable.hpp  mix.hpp
src/shapes/: box.hpp  bvh_node.hpp  rect.hpp  shape.hpp  shapelist.hpp  sphere.hpp  triangle.hpp
src/shapes/modifiers/: flipnormals.hpp  rotate.hpp  translate.hpp
src/textures/: bitmap.hpp  checker.hpp  color.hpp  constant.hpp  image.hpp  texture.hpp
